Correct overflow for mobile devices

--- a/styles/index.css
+++ b/styles/index.css
@@ -41,6 +41,7 @@ body {
   height: 100vh;
   width: 100%;
   background: var(--dark-metal-black);
+  overflow: hidden;
 }
 
 body > div {
